fix overflow of ticket edit buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -135,6 +135,10 @@ body {
     gap: 20px;
 }
 
+/* .nav__grid__item {
+    margin-bottom: 2.5em;
+} */
+
 .sticky-note {
     background: #fff799;
     box-shadow: 0 0 7px 2px rgba(0, 0, 0, 0.3);
